force-app/main/default/objects/TriageAssessment__c/TriageAssessment__c.object-meta.xml
<CustomObject>
    <label>Triage Assessment</label>
    <pluralLabel>Triage Assessments</pluralLabel>
    <nameField>
        <label>Triage Assessment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>