force-app/main/default/objects/TriageAssessment__c/fields/AlertDetails__c.field-meta.xml
<CustomField>
    <fullName>AlertDetails__c</fullName>
    <label>Alert Details</label>
    <type>Text</type>
    <length>255</length>
</CustomField>