force-app/main/default/objects/TriageAssessment__c/fields/AssignedArea__c.field-meta.xml
<CustomField>
    <fullName>AssignedArea__c</fullName>
    <label>Assigned Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Care</fullName>
            </value>
            <value>
                <fullName>Main ER</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
            <value>
                <fullName>Intermediate Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>