force-app/main/default/objects/TriageAssessment__c/fields/CriticalAlert__c.field-meta.xml
<CustomField>
    <fullName>CriticalAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Alert</label>
    <type>Checkbox</type>
</CustomField>