force-app/main/default/objects/TriageAssessment__c/fields/PatientIntake__c.field-meta.xml
<CustomField>
    <fullName>PatientIntake__c</fullName>
    <label>Patient Intake</label>
    <referenceTo>PatientIntake__c</referenceTo>
    <relationshipLabel>Triage Assessments</relationshipLabel>
    <relationshipName>TriageAssessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>